--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,3 +19,11 @@ services:
         - "3308:3306"
     restart: unless-stopped
     tty: true
+
+  adminer:
+    image: adminer:5.1.0
+    restart: always
+    ports:
+      - 1333:8080
+    environment:
+      ADMINER_DEFAULT_SERVER: mariadb-java
