feat: enhance development setup with live reload

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,4 +8,4 @@ RUN mvn dependency:go-offline -B
 
 COPY src src
 
-CMD ["mvn", "spring-boot:run"]
+CMD ["mvn", "spring-boot:run", "-Dspring-boot.run.jvmArguments='-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8000'"]
