--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,5 @@ springdoc.swagger-ui.path=/docs
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
