feat : implement auth api calls

--- a/frontend/wpf-dotnet/wpf-dotnet/wpf-dotnet.csproj
+++ b/frontend/wpf-dotnet/wpf-dotnet/wpf-dotnet.csproj
@@ -59,6 +59,7 @@
 			<Generator>MSBuild:Compile</Generator>
 			<SubType>Designer</SubType>
 		</Page>
+		<Compile Include="Utils\SessionManager.cs" />
 		<Page Include="Login.xaml">
 			<Generator>MSBuild:Compile</Generator>
 			<SubType>Designer</SubType>
