--- a/frontend/wpf-dotnet/wpf-dotnet/packages.config
+++ b/frontend/wpf-dotnet/wpf-dotnet/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Apache.NMS" version="1.5.1" targetFramework="net472" />
-  <package id="Apache.NMS.Stomp" version="1.5.4" targetFramework="net472" />
   <package id="Extend" version="1.2.1" targetFramework="net472" />
+  <package id="Fleck" version="0.13.0.57" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="NLog" version="4.2.3" targetFramework="net472" />
   <package id="Stomp.Net" version="2.4.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
@@ -54,6 +55,7 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
+  <package id="Ultralight" version="1.0.0.6" targetFramework="net472" />
   <package id="WebSocketSharp.Standard" version="1.0.3" targetFramework="net472" />
   <package id="WebSocketSharp-NonPreRelease" version="1.0.0" targetFramework="net472" />
 </packages>
